Create URL model and Database context, Configure the PostgreSQL connection

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Database=URLShortenerDB;Username=db_user;Password=db_1239874655"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
